OptiX driver crashes when hiding/showing objects in rendered view #87793

Closed
opened 2021-04-25 10:07:55 +02:00 by Tiago Marinho · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: 2.91 (it definitely never happens in 2.91, at least on my machine)

Seems like this broke between ba740ad2ab (good) and 977ef04746 (bad)

Short description of error
When hiding/showing objects quickly in the viewport there's a high probability that the viewport rendering will crash with the following error:

CUDA_ERROR_ILLEGAL_ADDRESS in cuStreamSynchronize(cuda_stream[thread_index]) (device_optix.cpp:816)

the exact function and line reported in this error varies a bit.

Exact steps for others to reproduce the error

  1. Open "The Junk Shop" from Blender's official demo files (I've had more luck reproducing it with heavier scenes).
  2. Go to rendered view.
  3. Click the eye icon in the outliner to hide the Girl collection.
  4. Click the eye icon again to show the Girl collection.
  5. Repeat step 3 and 4 in varying speeds until the viewport render crashes.

Note:
I'm aware this might seem like a non-issue when following the repro steps, but this can and does happen even when hiding/showing an object only once, depending on the scene.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: 2.91 (it definitely never happens in 2.91, at least on my machine) Seems like this broke between ba740ad2ab (good) and 977ef04746 (bad) **Short description of error** When hiding/showing objects quickly in the viewport there's a high probability that the viewport rendering will crash with the following error: ``` CUDA_ERROR_ILLEGAL_ADDRESS in cuStreamSynchronize(cuda_stream[thread_index]) (device_optix.cpp:816) ``` the exact function and line reported in this error varies a bit. **Exact steps for others to reproduce the error** 1. Open "The Junk Shop" from Blender's official demo files (I've had more luck reproducing it with heavier scenes). 2. Go to rendered view. 3. Click the eye icon in the outliner to hide the `Girl` collection. 4. Click the eye icon again to show the `Girl` collection. 5. Repeat step 3 and 4 in varying speeds until the viewport render crashes. Note: I'm aware this might seem like a non-issue when following the repro steps, but this can and does happen even when hiding/showing an object only once, depending on the scene.
Author

Added subscriber: @tiagomeraki

Added subscriber: @tiagomeraki

#86915 was marked as duplicate of this issue

#86915 was marked as duplicate of this issue

#87253 was marked as duplicate of this issue

#87253 was marked as duplicate of this issue
Author

Here's the system info file, in case it's needed:

system-info.txt

Here's the system info file, in case it's needed: [system-info.txt](https://archive.blender.org/developer/F10037060/system-info.txt)

Added subscriber: @Gurra

Added subscriber: @Gurra

Yes I can confirm this. Was already noticing this in the 2.92 alpha or beta which I started using because of the new ambient occlusion support in Optix (don't know if that has to do with the crashes tho). Didn't really know how to report this in a good way so I never did, instead I got it into my muscle memory to pause then render whenever I was gonna hide or show something. Would be nice with a proper fix tho :)

Yes I can confirm this. Was already noticing this in the 2.92 alpha or beta which I started using because of the new ambient occlusion support in Optix (don't know if that has to do with the crashes tho). Didn't really know how to report this in a good way so I never did, instead I got it into my muscle memory to pause then render whenever I was gonna hide or show something. Would be nice with a proper fix tho :)
Member

Added subscribers: @pmoursnv, @lichtwerk

Added subscribers: @pmoursnv, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this as well.

CC @pmoursnv

I can confirm this as well. CC @pmoursnv

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Added subscribers: @Hongyu, @mano-wii

Added subscribers: @Hongyu, @mano-wii

This issue was referenced by 0456223cde

This issue was referenced by 0456223cde98712c16cb9b584b5c66c58ec915c3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-05-19 18:34:06 +02:00
Member
Added subscribers: @Lorathor, @PratikPB2123, @mesropa, @ChristianFriedrich, @aisatan.ne
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87793
No description provided.