Fix T87793: Cycles OptiX crash hiding objects in viewport render